--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
+.App{
+  height: 100%;
+}
+.header {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  margin-top: 50px;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.animations_level1 {
+  display: flex;
+  justify-content: space-between;
+  gap: 70px;
+
+}
+.btn{
+  width: 200px;
+  height: 40px;
+  background-color: #a1ff2f;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  color: black;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.animation9{
+  width: 500px;
+}
+.animation11{
+  font-size: 22px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+#animated-text{
+  font-size: 22px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
