--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 body {
-  margin: 0;
+  margin: 0 30px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  background-color: #ece0fa;
+  padding: 0;
 }
 
 code {
